--- a/home.html
+++ b/home.html
@@ -4,9 +4,11 @@
     <title>Flashbyte</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta property="og:type" content="site">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="assets/images/av.png" />
-
+    <meta property="og:title" content="Pndaboi!" />
+    <meta property="og:description" content="Certified Pogger!" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="assets/css/cte.css" />
   </head>
