--- a/home.html
+++ b/home.html
@@ -7,8 +7,8 @@
     <meta property="og:type" content="site">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="assets/images/av.png" />
-    <meta property="og:title" content="Pndaboi!" />
-    <meta property="og:description" content="Certified Pogger!" />
+    <meta property="og:title" content="Flashbyte" />
+    <meta property="og:description" content="FlashbyteV4#7701" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="assets/css/cte.css" />
   </head>
